--- a/car dataset.ipynb
+++ b/car dataset.ipynb
@@ -4,15 +4,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Car Dataset Analysis**"
-
-
----
-
-This analysis will provide valuable insights into automotive trends, helping manufacturers, researchers, and consumers understand patterns in car performance, fuel efficiency, and pricing."
+    "# Car Dataset Analysis"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You are a Data Analyst working on automotive market research, tasked with analyzing real-world car data to extract meaningful insights about car manufacturers, engine specifications, and performance metrics.\n",
+    "You have been provided with a dataset that contains details about various car models, including their make, model, engine size, cylinders, horsepower, and fuel efficiency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Your analysis must be able to address the following questions:\n",
+    "\n",
+    "1. **Handling Missing Values:**\n",
+    "    - Identify missing values in the dataset.\n",
+    "    - Handle missing values either by removing incomplete records or imputing them with statistical measures (mean, median, etc.).\n",
+    "\n",
+    "2. **Popular Car Makes:**\n",
+    "    - Which car manufacturers (makes) have the most occurrences in the dataset?\n",
+    "    - What are the most common car models produced by these manufacturers?\n",
+    "\n",
+    "3. **Fuel Efficiency and Engine Performance:**\n",
+    "    - What is the average fuel efficiency (MPG in city and highway) for cars based on the number of cylinders?\n",
+    "    - Does higher engine size correlate with better performance (horsepower), and how does it affect fuel efficiency?\n",
+    "\n",
+    "4. **Regional Car Preferences:**\n",
+    "    - Compare car origins (Asia, Europe, and USA) to find patterns in engine size, cylinders, and fuel efficiency.\n",
+    "    - Analyze the differences in engine size and horsepower among cars originating from Asia and Europe.\n",
+    "\n",
+    "5. **Weight Distribution:**\n",
+    "    - What is the distribution of car weights in the dataset? Identify the range of car weights that is most common.\n",
+    "    - Remove records where the car weight exceeds 4000 lbs. How does this impact the overall fuel efficiency analysis?\n",
+    "\n",
+    "6. **Fuel Efficiency Improvement:**\n",
+    "    - Simulate a scenario where the fuel efficiency of all cars in the dataset improves by 3 MPG in city driving. How does this change the overall average fuel efficiency for the dataset?\n",
+    "\n",
+    "7. **Price Analysis:**\n",
+    "    - Compare the MSRP and Invoice prices for the cars. Identify the average difference between MSRP (Manufacturer's Suggested Retail Price) and Invoice price.\n",
+    "    - Analyze the pricing differences between cars with different drivetrain types (Front, Rear, and All-Wheel Drive).\n",
+    "\n",
+    "8. **Additional Tasks:**\n",
+    "    - Create a new column to calculate the price difference (MSRP - Invoice) for each car and analyze whether the price difference is higher for specific manufacturers or types of cars.\n",
+    "    - Identify the trade-offs between horsepower and fuel economy. Are high-performance cars less fuel-efficient?\n",
+    "    - Based on the dataset's timeline, identify any real-world events (such as changes in fuel prices or environmental regulations) that could have influenced trends in engine size, fuel efficiency, or car types."
+   ]
+  }
+ ]
+}
+
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
